# embeddings

./: .env.example  .gitignore  README.md  demo.py  demo_output.txt  test_emb_output.txt  test_output.txt
.kiro/specs/multimodal-search-vertex-qdrant/: .config.kiro  design.md  requirements.md  tasks.md
advanced/: README.md
config/: __init__.py  logging_config.py  settings.py
evaluation/: README.md
examples/: cross_modal_search.py  multilingual_search.py  two_stage_retrieval.py
fundamentals/: README.md
models/: README.md
multimodal/: README.md
multimodal/multimodal-search-vertex-qdrant/: README.md  export_qdrant.py  pyproject.toml  smoke_test.py  test_all_output.txt  visualize.py  viz_output.txt
multimodal/multimodal-search-vertex-qdrant/examples/: embed_modalities.py  interleaved_multimodal.py
multimodal/multimodal-search-vertex-qdrant/src/multimodal_search/: __init__.py  vector_store.py
multimodal/multimodal-search-vertex-qdrant/tests/: __init__.py  conftest.py  test_api.py  test_interleaved.py
production/: README.md
resources/: README.md
retrieval/: README.md
src/multimodal_search/: api.py  content_processor.py  embedding_service.py  exceptions.py  models.py  search_engine.py
tests/: test_embedding_service.py  test_models.py  test_search_engine.py
training/: README.md
use_cases/: README.md
vector_databases/: README.md
